Initial commit for hw-solution